modificacion del link del index principal

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="ErickLTI/boton_index/boton_index.css">
         <link rel="stylesheet" href="caroocaast/paginaweb.2/estiloss.css">
         <link rel="stylesheet" href="MiguelABanda/Estilo.css">
+        <link rel="stylesheet" href="luca384/stylelink.css">
         <title>Grupo 52</title>
     </head>
     <body>
@@ -148,7 +149,7 @@
                     <li id="a38">
                         <a href="ianstiglitz/index.html">IanStiglitz</a>
                     </li>
-                    <li id="a39"><a href="#">TREVIÑO SUAREZ LUCA RAMON </a></li>
+                    <li id="a39"><a href="luca384/index.html">luca384 </a></li>
                     <li id="a40">
                         <a href="#">VALERIO AGUIRRE GISELLE NAHOMI </a>
                     </li>
