--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <link rel="stylesheet" href="FerminEstrada52/style.css">
         <link rel="stylesheet" href="RdeReimer/StylesGlobal.css">
         <link rel="stylesheet" href="luca384/stylelink.css">
+        <link rel="stylesheet" href="diegoalgosa/css/estilos2.css">
         <title>Grupo 52</title>
     </head>
     <body>
@@ -81,9 +82,7 @@
                     <li id="a14">
                         <a href="#">GONZALEZ INFANTE ALAN JAIR </a>
                     </li>
-                    <li id="a15">
-                        <a href="diegoalgosa/index.html">diegoalgosa </a>
-                    </li>
+                    <li id="a15"><a href="diegoalgosa/index.html">diegoalgosa </a></li>
                     <li id="a16">
                         <a href="ernesgarcia06/index.html">ernesgarcia06 </a>
                     </li>
