--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         >
                     </li>
                     <li id="a14">
-                        <a href="#">GONZALEZ INFANTE ALAN JAIR </a>
+                        <a href="Alumno-2026415/index.html">Alumno-2026415 </a>
                     </li>
                     <li id="a15"><a href="diegoalgosa/index.html">diegoalgosa </a></li>
                     <li id="a16">
