cambie el estilo

--- a/IlseOjeda/index.html
+++ b/IlseOjeda/index.html
@@ -46,7 +46,7 @@
     </main>
     <footer>
         <p>Desarrollado por Ilse Ojeda
-        <img src="logo.png" alt="Logo" class="logo-footer">
+        <img src="img/logo.png" alt="Logo" class="logo-footer">
         </p>
     </footer>
 </body>
