--- a/IlseOjeda/pasatiemposv2/gatos.html
+++ b/IlseOjeda/pasatiemposv2/gatos.html
@@ -43,7 +43,7 @@
       </section>
     </article>
   <br>
-  <embed src="cuidadogatos.pdf" type="">
+  <embed src="pdf/cuidadogatos.pdf" type="">
   </main>
     <footer>
         <p>Desarrollado por Ilse Ojeda
