--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <link rel="stylesheet" href="RdeReimer/StylesGlobal.css">
         <link rel="stylesheet" href="luca384/stylelink.css">
         <link rel="stylesheet" href="diegoalgosa/css/estilos2.css">
+        <link rel="stylesheet" href="IlseOjeda/estilo_nombre/estilonom.css">
+
         <title>Grupo 52</title>
     </head>
     <body>
