--- a/IlseOjeda/index.html
+++ b/IlseOjeda/index.html
@@ -40,9 +40,16 @@
                 <li><a href="pasatiemposv2/index.html">Página pasatiempos versión 2</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-08-27&until=2025-08-27">Commits 27 de agosto</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-08-28&until=2025-08-29">Commits 28 al 29 de agosto</a></li>
-
             </ul>
         </section>
+        <h2>Evidencia 4</h2>
+        <p>En esta evidencia apliqué un estilo personalizado a mi link de la página principal de la organización agregando un link css en la sección head del archivo index.</p>
+    <section class="links">
+            <h2>Links solicitados</h2>
+            <ul>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-09-01&until=2025-09-03">Commits 01 al 03 de agosto</a></li>
+            </ul>
+        </section>        
     </main>
     <footer>
         <p>Desarrollado por Ilse Ojeda
