--- a/ernesgarcia06/index.html
+++ b/ernesgarcia06/index.html
@@ -41,10 +41,18 @@
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-08-27&until=2025-08-29" target="_blank">Link Commits 27 a 29 Agosto</a></li>
             </ul>
         </nav>
+        <h3>Práctica 4</h3>
+        <p>En esta práctica se cambio el diseño del link de nombre de usuario y se le dio un diseño personalizado</p>
+        <p>Realizado entre el 1 y 3 de septiembre del 2025</p>
+        <nav>
+            <ul>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-09-01&until=2025-09-03" target="_blank">Link Commits</a></li>
+            </ul>
+        </nav>
     </main>
     <aside></aside>
     <footer>
-        <address>Desarrollado por Luis Ernesto Guzmán García</address>
+        <address>&copy;Desarrollado por Luis Ernesto Guzmán García</address>
     </footer>
 </body>
 </html>
