cambios index personal

--- a/ernesgarcia06/index.html
+++ b/ernesgarcia06/index.html
@@ -32,7 +32,7 @@
             </ul>
         </nav>
         <h3>Práctica 3</h3>
-        <p>En esta práctica se mejoro la página inicial sobre pasatiempos, se dividio en 5 páginas .</p>
+        <p>En esta práctica se mejoro la página inicial sobre pasatiempos y se dividio en 5 páginas.</p>
         <p>Realizado entre el 27 y 29 de agosto del 2025</p>
         <nav>
             <ul>
@@ -42,7 +42,7 @@
             </ul>
         </nav>
         <h3>Práctica 4</h3>
-        <p>En esta práctica se cambio el diseño del link de nombre de usuario y se le dio un diseño personalizado</p>
+        <p>En esta práctica se cambio el diseño del link de nombre de usuario y se le dio un diseño personalizado.</p>
         <p>Realizado entre el 1 y 3 de septiembre del 2025</p>
         <nav>
             <ul>
