--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <link rel="stylesheet" href="luca384/stylelink.css">
         <link rel="stylesheet" href="diegoalgosa/css/estilos2.css">
         <link rel="stylesheet" href="IlseOjeda/estilo_nombre/estilonom.css">
+        <link rel="stylesheet" href="ivanmane/ccsnombre/nombre.css">
         <title>Grupo 52</title>
     </head>
     <body>
