--- a/FernandaGomezG/index.html
+++ b/FernandaGomezG/index.html
@@ -33,13 +33,15 @@
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/e075f67d1cce1444f30b8260d66091102b3199ed/?author=FernandaNohemiGomezGarcia&since=2025-08-20&until=2025-08-22">Commits realizados del 20 al 22</a></li>
             </ul>
         </nav>
-
-        <h4 style="color: rgb(70, 70, 182);">Publicación de la práctica 3</h4>
+    <nav>
+        <h3 style="color: rgb(70, 70, 182);">Publicación de la práctica 3</h4>
         <ol>
             <li><a href="practica3/index.html">Página sobre mis hobbies (ver2)</a></li>
             <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-08-27&until=2025-08-27">Commits clase 27 de agosto 2025</a></li>
             <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-08-27&until=2025-08-29">Commits realizados del 27 al 29 de agosto</a></li>
         </ol>
+    </nav>
+    <h3 style="color: rgb(70, 70, 182);"> Publicación de la práctica 4 </h3>
     </main>
     <aside></aside>
     <footer>
