--- a/FernandaGomezG/index.html
+++ b/FernandaGomezG/index.html
@@ -42,10 +42,14 @@
         </ol>
     </nav>
     <h3 style="color: rgb(70, 70, 182);"> Publicación de la práctica 4 </h3>
+    <p>En esta práctica se modificó el diseño de link del usuario personal de GitHub.</p>
+    <ol>
+        <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-09-01&until=2025-09-03" target="_blank">Commits realizados del 01 al 03 de septiembre</a></li>
+    </ol>
     </main>
     <aside></aside>
     <footer>
-        <p style="color: rgb(70, 70, 182);"><strong> Desarrollado por Fernanda Nohemí Gómez García, Grupo 52</strong></p>
+        <address>&copy;Desarrollado por Fernanda Nohemí Gomez Garcia</address>
     </footer>
 </body>
 </html>
