--- a/oswtobias06/index.html
+++ b/oswtobias06/index.html
@@ -42,6 +42,13 @@
         <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-08-27&until=2025-08-29" target="_blank">Commits 
 </a></li>
         </article>
+        <article>
+            <h3>Practica 4</h3>
+        <p>En la practica 4 de la evidencia 1, aplicamos un estilo personalizado a cada uno de nuestros links de la carpeta de trabajos y evidencias de cada quien, dependiendo de cada estilo de diseño que tiene cada uno, entonces lo diseñamos a nuestro modo</p>
+        <h3>Links - Fechas del 1 a 3 de septiembre</h3>
+        <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-09-01&until=2025-09-03"> Commits
+</a></li>
+        </article>
     </main>
     <aside></aside>
     <footer></footer>
