--- a/danielvm216/index.html
+++ b/danielvm216/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h2>Evidencias de Daniel Arturo Vallejo Maldonado</h2>
+        <h1>Evidencias de Daniel Arturo Vallejo Maldonado</h1>
     </header>
     <main>
         <main>
@@ -19,8 +19,8 @@
                 <li><a href="https://github.com/danielvm216/practicas/commits?since=2025-08-13&until=2025-08-15">Commits del 13/08/2025 al 15/08/2025</a></li>
                 </ul>
             </section>
-
         </article>
+
         <h2>Evidencia 2</h2>
         <p>En esta evidencia basicamente se creó esta pagina</p>
         <article>
@@ -28,7 +28,6 @@
             <li><a href="https://github.com/FDW52AD2025/website52/commits?author=danielvm216&since=2025-08-20&until=2025-08-22">Commits 20/08/2025 al 22/08/2025</a></li>
         </article>
 
-        </article>
         <h2>Evidencia 3</h2>
         <p>En esta evidencia se creo un archivo sobre mis pasatiempos pero ahora dentro de la organizacion, ademas de utilizando etiquetas y herramientas nuevas.</p>
         <article>
@@ -36,6 +35,13 @@
             <li><a href="pasatiemposv2/index.html">Pagina de la evidencia</a></li>
             <li><a href="https://github.com/FDW52AD2025/website52/commits?author=danielvm216&since=2025-08-27&until=2025-08-29">Commits 27/08/2025 al 29/08/2025</a></li>
         </article>
+
+        <h2>Evidencia 4</h2>
+        <p>En esta evidencia cree mi diseño personal para mi nombre de usuario en el index principal del repositorio.</p>
+        <article>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits?author=danielvm216&since=2025-09-01&until=2025-09-03">Commits 1/09/2025 al 3/09/2025s</a></li>
+        </article>
+        
 
 
 
