--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <link rel="stylesheet" href="IlseOjeda/estilo_nombre/estilonom.css">
         <link rel="stylesheet" href="ivanmane/ccsnombre/nombre.css">
         <link rel="stylesheet" href="danielvm216\cssname\estilos.css">
+        <link rel="stylesheet" href="EddMont/PagEstilo.css">
         <title>Grupo 52</title>
     </head>
     <body>
