--- a/EddMont/index.html
+++ b/EddMont/index.html
@@ -53,6 +53,14 @@
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">Commits</a></li>
             </ul>
         </article>
+
+        <article>
+            <h2>practica 4</h2>
+            <p>Cambiar estilo de link ></p>
+            <ul>
+                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">Commits</a></li>
+            </ul>
+        </article>
     </main>
 
     <footer>
