--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <link rel="stylesheet" href="diegoalgosa/css/estilos2.css">
         <link rel="stylesheet" href="IlseOjeda/estilo_nombre/estilonom.css">
         <link rel="stylesheet" href="ivanmane/ccsnombre/nombre.css">
+        <link rel="stylesheet" href="CarlosPortalesM/css/estilos.css">
         <title>Grupo 52</title>
     </head>
     <body>
