--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <li id="a11">
                         <a href="FerminEstrada52/index.html">fer-ecs </a>
                     </li>
-                    <li id="a12"><a href="#">GASPAR IBARRA BERNARDO </a></li>
+                    <li id="a12"><a href="BernaGaspar/index.html">BernaGaspar</a></li>
                     <li id="a13">
                         <a href="FernandaGomezG/index.html"
                             >FernandaNohemiGomezGarcia</a
