--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <link rel="stylesheet" href="CarlosPortalesM/css/estilos.css">
         <link rel="stylesheet" href="danielvm216\cssname\estilos.css">
         <link rel="stylesheet" href="EddMont/PagEstilo.css">
+        <link rel="stylesheet" href="BernaGaspar/CSS/estilos.css">
         <title>Grupo 52</title>
     </head>
     <body>
