Agregue estilo al link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <link rel="stylesheet" href="danielvm216\cssname\estilos.css">
         <link rel="stylesheet" href="EddMont/PagEstilo.css">
         <link rel="stylesheet" href="BernaGaspar/CSS/estilos.css">
+        <link rel="stylesheet" href="RickyCorCam/Styles/style-linkname.css">
         <title>Grupo 52</title>
     </head>
     <body>
@@ -68,7 +69,7 @@
                     <li id="a07"><a href="atchz/index.html">atchz </a></li>
                     <li id="a08">
                         <a href="RickyCorCam/index.html"
-                            >CORTES CAMARILLO RICARDO
+                            >RickyCorCam
                         </a>
                     </li>
                     <li id="a09">
