--- a/RickyCorCam/pasatiempos2/index.html
+++ b/RickyCorCam/pasatiempos2/index.html
@@ -18,8 +18,8 @@
             <ul>
                 <li><a href="pasatiempo1.html" target="_blank">VIDEOJUEGOS</a></li>
                 <li><a href="pasatiempo2.html" target="_blank">GUITARRA</a></li>
-                <li><a href="pasatiempo3.html" target="_blank">Pasatiempo3</a></li>
-                <li><a href="pasatiempo4.html" target="_blank">Pasatiempo4</a></li>
+                <li><a href="pasatiempo3.html" target="_blank">ANIME</a></li>
+                <li><a href="pasatiempo4.html" target="_blank">PROGRAMAR</a></li>
             </ul>
         </section>
         <br>
