--- a/RickyCorCam/index.html
+++ b/RickyCorCam/index.html
@@ -73,7 +73,23 @@
                 <ul>
                     <li><a href="https://fdw52ad2025.github.io/website52/RickyCorCam/pasatiempos2/index.html">Link de la pagina pasatiempo version 2</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-08-27&until=2025-08-27">Link commit trabajo en clase 27 de agosto</a></li>
-                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-08-27&until=2025-08-29">Links commits</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-08-27&until=2025-08-29">Link commits del 27 al 29 de agosto</a></li>
+                </ul>
+            </article>
+        </section>
+        <section>
+            <hr>
+            <h1>Practica 4</h1>
+            <p>Aplicar estilo personalizado a su link de la página principal de la organización. <br>
+                Los estilos aplicados deben ser almacenados dentro de su carpeta en la organización. <br>
+                Será necesario agregar un link css en la sección head del archivo index (archivo de la organización). <br>
+
+                Fecha commits: 1 al 3 de Septiembre.
+            </p>
+            <article>
+                <h1>Links de la practica 4</h1>
+                <ul>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-09-01&until=2025-09-03">Links commits del 1 al 3 de septiembre</a></li>
                 </ul>
             </article>
         </section>
