--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <link rel="stylesheet" href="EddMont/PagEstilo.css">
         <link rel="stylesheet" href="BernaGaspar/CSS/estilos.css">
         <link rel="stylesheet" href="RickyCorCam/Styles/style-linkname.css">
+        <link rel="stylesheet" href="1jecc/estilos_link.css">
+
         <title>Grupo 52</title>
     </head>
     <body>
