--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <link rel="stylesheet" href="BernaGaspar/CSS/estilos.css">
         <link rel="stylesheet" href="RickyCorCam/Styles/style-linkname.css">
         <link rel="stylesheet" href="1jecc/estilos_link.css">
+        <link rel="stylesheet" href="FernandaGomezG/css/estilos.css">
 
         <title>Grupo 52</title>
     </head>
