--- a/IlseOjeda/index.html
+++ b/IlseOjeda/index.html
@@ -11,6 +11,16 @@
         <h1>Evidencias Fundamentos de Desarrollo Web</h1>
     </header>
     <main>
+    <span class="cat">
+    <span class="ear left"></span>
+    <span class="ear right"></span>
+    <span class="whiskers left top"></span>
+    <span class="whiskers left bottom"></span>
+    <span class="whiskers right top"></span>
+    <span class="whiskers right bottom"></span>
+    <span class="sparkle1"></span>
+    <span class="sparkle2"></span>
+    </span>
         <h2>Evidencia 1</h2>
         <p>En esta primera practica realicé una página web en donde se integro información sobre 4 de mis pasatiempos aplicando un commit para cada uno. 
         Se utilizaron las etiquetas: meta, title, header, main,footer, article, section, img y p. 
@@ -49,12 +59,12 @@
             <ul>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-09-01&until=2025-09-03">Commits 01 al 03 de agosto</a></li>
             </ul>
-        </section>        
+        </section>      
     </main>
-    <footer>
-        <p>Desarrollado por Ilse Ojeda
-        <img src="img/logo.png" alt="Logo" class="logo-footer">
-        </p>
+    <footer> 
+        <p>Desarrollado por Ilse Ojeda 
+        <img src="img/logo.png" alt="Logo" class="logo-footer"> 
+        </p> 
     </footer>
 </body>
 </html>
