--- a/IlseOjeda/pasatiemposv2/cocinar.html
+++ b/IlseOjeda/pasatiemposv2/cocinar.html
@@ -54,10 +54,10 @@
       </section>
     </article>
   </main>
-    <footer>
-        <p>Desarrollado por Ilse Ojeda
-        <img src="img/logo.png" alt="Logo" class="logo-footer">
-        </p>
-    </footer>
+  <footer>
+    <p>Desarrollado por <span class="nombre">Ilse Ojeda</span>
+    <img src="img/logo.png" alt="Logo" class="logo-footer">
+    </p>
+  </footer>
 </body>
 </html>
