--- a/IlseOjeda/pasatiemposv2/correr.html
+++ b/IlseOjeda/pasatiemposv2/correr.html
@@ -73,10 +73,10 @@
 </table>      </section>
     </article>
   </main>
-    <footer>
-        <p>Desarrollado por Ilse Ojeda
-        <img src="img/logo.png" alt="Logo" class="logo-footer">
-        </p>
-    </footer>
+  <footer>
+    <p>Desarrollado por <span class="nombre">Ilse Ojeda</span>
+    <img src="img/logo.png" alt="Logo" class="logo-footer">
+    </p>
+  </footer>
 </body>
 </html>
