--- a/IlseOjeda/pasatiemposv2/gatos.html
+++ b/IlseOjeda/pasatiemposv2/gatos.html
@@ -45,10 +45,10 @@
   <br>
   <embed src="pdf/cuidadogatos.pdf" type="">
   </main>
-    <footer>
-        <p>Desarrollado por Ilse Ojeda
-        <img src="img/logo.png" alt="Logo" class="logo-footer">
-        </p>
-    </footer>
+  <footer>
+    <p>Desarrollado por <span class="nombre">Ilse Ojeda</span>
+    <img src="img/logo.png" alt="Logo" class="logo-footer">
+    </p>
+  </footer>
 </body>
 </html>
