--- a/Bere-ops/index.html
+++ b/Bere-ops/index.html
@@ -42,6 +42,17 @@
         </ul>
         <h2>Fecha de los commits: </h2>
         <p> 27 al 29 de Agosto</p>
+
+        <hr>
+
+        <h2>Práctica 4</h2>
+        <p>Apliqué un estilo personalizado a mi link de la página principal de la organización. Los estilos que utilicé los guardé dentro de mi carpeta en la organización.</p>
+        <p>Link</p>
+        <ul>
+            <li>https://github.com/FDW52AD2025/website52/commits/main/?since=2025-09-01&until=2025-09-03&author=Bere-ops</li>
+        </ul>
+        <h2>Fecha de los commits: </h2>
+        <p> 1 al 3 de Septiembre.</p>
     </main>
     <aside></aside>
     <footer>
