--- a/gfuelinme/index.html
+++ b/gfuelinme/index.html
@@ -63,6 +63,19 @@
                     </li>
                 </ul>
             </section>
+            <section>
+                <h3>Practica 4</h3>
+                <p>Realizada el 2 de septiembre del 2025.</p>
+                <p>En esta practica se modificó el estilo de nuestro enlace de portafolio en la lista de la organización.</p>
+                <ul>
+                    <li>
+                        <a href="" target="_blank">Lista</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/FDW52AD2025/website52/commits?author=gfuelinme&since=2025-09-02&until=2025-09-02" target="_blank">Commits</a>
+                    </li>
+                </ul>
+            </section>
         </article>
     </main>
     <aside></aside>
