Se agrego la practica 4

--- a/atchz/index.html
+++ b/atchz/index.html
@@ -144,6 +144,36 @@
                     <footer></footer>
                 </section>
 
+                <section>
+                    <header>
+                        <h3>Practica 4</h3>
+                    </header>
+
+                    <p>
+                        Aplicar estilo personalizado a su link de la página
+                        principal de la organización. Los estilos aplicados
+                        deben ser almacenados dentro de su carpeta en la
+                        organización. Será necesario agregar un link css en la
+                        sección head del archivo index (archivo de la
+                        organización).
+                    </p>
+
+                    <p>Fecha commits: 1 al 3 de Septiembre.</p>
+
+                    <nav>
+                        <ul>
+                            <li>
+                                <a
+                                    href="https://github.com/FDW52AD2025/website52/commits/main/?author=atchz&since=2025-09-01&until=2025-09-03"
+                                    target="_blank"
+                                    >Link Commits</a
+                                >
+                            </li>
+                        </ul>
+                    </nav>
+                    <footer></footer>
+                </section>
+
                 <footer>
                     <p>Desarrollado por Juan Antonio</p>
                 </footer>
