--- a/Bejesusrey/pasatiemposV2/pagina2.html
+++ b/Bejesusrey/pasatiemposV2/pagina2.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1><strong> &#127947;Hacer Ejercicio&#9917;</strong></h1>
+        <h1><strong> &#127947;<span class="resaltar2">Hacer Ejercicio</span>&#9917;</strong></h1>
     </header>
     <main>
 
