--- a/Bejesusrey/pasatiemposV2/pagina3.html
+++ b/Bejesusrey/pasatiemposV2/pagina3.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1><strong>&#127918;Video Juegos</strong></h1>
+        <h1><strong>&#127918;<span class="resaltar3">Video Juegos</span></strong></h1>
     </header>
     <main>
 
