--- a/Bejesusrey/pasatiemposV2/pagina4.html
+++ b/Bejesusrey/pasatiemposV2/pagina4.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1><strong>&#127869;Arte Culinario</strong></h1>
+        <h1><strong>&#127869;<span class="resaltar4">Arte Culinario</span></strong></h1>
     </header>
     <main>
 
