--- a/Bejesusrey/pasatiemposV2/pagina5.html
+++ b/Bejesusrey/pasatiemposV2/pagina5.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1><strong>&#127926;Tocar Musica</strong></h1>
+        <h1><strong>&#127926;<span class="resaltar5">Tocar Musica</span></strong></h1>
     </header>
     <main>
         <header>
