se agregaron los links a la pagina de evidencias

--- a/ianstiglitz/index.html
+++ b/ianstiglitz/index.html
@@ -17,23 +17,35 @@
         <ul>        
             <li><a href="https://ianstiglitz.github.io/Practica1_PasatiemposTrevi-o/">Página Github.io</a></li>
             <li><a href="https://github.com/IanStiglitz/Practica1_PasatiemposTrevi-o">Página del repositorio</a></li>
-            <li><a href="https://github.com/IanStiglitz/Practica1_PasatiemposTrevi-o/commits/master">Página de los commits</a></li>
+            <li><a href="https://github.com/IanStiglitz/Practica1_PasatiemposTrevi-o/commits/master/?since=2025-08-13&until=2025-08-15">Página de los commits</a></li>
         </ul>
         </ul>
         
         <ul>
         <h2>Practica 2: Carpeta en la organización</h2>
         <p>En esta práctica se creó una carpeta personal en la organización y dentro de la misma se agregó un archivo llamado index.html.</p>
+            <ul>
+                <li><a href="https://fdw52ad2025.github.io/website52/ianstiglitz/index.html">Pagina personal</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=IanStiglitz&since=2025-08-20&until=2025-08-22">Commits</a></li>
+            </ul>
         </ul>
 
         <ul>
         <h2>Practica 3: Rework a Pasatiempos Treviño</h2>
         <p>Modificar la página pasatiempos que desarrollo en su cuenta personal. Está practica consiste en realizar la versión 2 sobre sus pasatiempos, pero esta vez se tiene que guardar en la organización. Se solicita que utilice 5 archivos html para la información de sus pasatiempos. En cada documento html utilice etiquetas de estructura (header,nav, main,aside,footer).</p>
+            <ul>
+                <li><a href="https://fdw52ad2025.github.io/website52/ianstiglitz/pasatiemposver2/index.html">Main page</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=IanStiglitz&since=2025-08-27&until=2025-08-27">Commits en clase</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=IanStiglitz&since=2025-08-27&until=2025-08-29">Commits</a></li>
+            </ul>
         </ul>
 
         <ul>
         <h2>Practica 4: Diseño del enlace</h2>
         <p>Aplicar estilo personalizado a su link de la página principal de la organización. Los estilos aplicados deben ser almacenados dentro de su carpeta en la organización. Será necesario agregar un link css en la sección head del archivo index (archivo de la organización).</p>
+            <ul>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=IanStiglitz&since=2025-09-01&until=2025-09-03">Commits</a></li>
+            </ul>
         </ul>
     </main>
     <aside></aside>
