--- a/ianstiglitz/pasatiemposver2/index.html
+++ b/ianstiglitz/pasatiemposver2/index.html
@@ -10,11 +10,11 @@
         <h1>Practica 3- Pasatiempos</h1>
     </header>
     <nav>
-        <a href="ianstiglitz/pasatiempos/index.html">Inicio</a> 
-        <a href="ianstiglitz/pasatiempos/index1.html">Videojuegos</a> 
-        <a href="ianstiglitz/pasatiempos/index2.html">Cocinar</a> 
-        <a href="ianstiglitz/pasatiempos/index3.html">Escuchar musica</a> 
-        <a href="ianstiglitz/pasatiempos/index4.html">Tocar guitarra</a>
+        <a href="https://fdw52ad2025.github.io/website52/ianstiglitz/pasatiemposver2/index.html">Inicio</a> 
+        <a href="https://fdw52ad2025.github.io/website52/ianstiglitz/pasatiemposver2/index1.html">Videojuegos</a> 
+        <a href="https://fdw52ad2025.github.io/website52/ianstiglitz/pasatiemposver2/index2.html">Cocinar</a> 
+        <a href="https://fdw52ad2025.github.io/website52/ianstiglitz/pasatiemposver2/index3.html">Escuchar musica</a> 
+        <a href="https://fdw52ad2025.github.io/website52/ianstiglitz/pasatiemposver2/index4.html">Tocar guitarra</a>
     </nav>
     <main>
         <p>Cualquier asunto por arreglar, favor de llenar la siguiente informacion
