correcion a los demas links de los otros index

--- a/ianstiglitz/pasatiemposver2/index3.html
+++ b/ianstiglitz/pasatiemposver2/index3.html
@@ -12,11 +12,11 @@
         </h1>
     </header>
     <nav>
-        <a href="ianstiglitz/pasatiempos/index.html">Inicio</a> 
-        <a href="ianstiglitz/pasatiempos/index1.html">Videojuegos</a> 
-        <a href="ianstiglitz/pasatiempos/index2.html">Cocinar</a> 
-        <a href="ianstiglitz/pasatiempos/index3.html">Escuchar musica</a> 
-        <a href="ianstiglitz/pasatiempos/index4.html">Tocar guitarra</a>
+ <a href="https://fdw52ad2025.github.io/website52/ianstiglitz/pasatiemposver2/index.html">Inicio</a> 
+        <a href="https://fdw52ad2025.github.io/website52/ianstiglitz/pasatiemposver2/index1.html">Videojuegos</a> 
+        <a href="https://fdw52ad2025.github.io/website52/ianstiglitz/pasatiemposver2/index2.html">Cocinar</a> 
+        <a href="https://fdw52ad2025.github.io/website52/ianstiglitz/pasatiemposver2/index3.html">Escuchar musica</a> 
+        <a href="https://fdw52ad2025.github.io/website52/ianstiglitz/pasatiemposver2/index4.html">Tocar guitarra</a>
     </nav>
     <main>
         <h2>Escuchar musica
