--- a/gfuelinme/index.html
+++ b/gfuelinme/index.html
@@ -69,7 +69,7 @@
                 <p>En esta practica se modificó el estilo de nuestro enlace de portafolio en la lista de la organización.</p>
                 <ul>
                     <li>
-                        <a href="" target="_blank">Lista</a>
+                        <a href="https://fdw52ad2025.github.io/website52/index.html" target="_blank">Lista</a>
                     </li>
                     <li>
                         <a href="https://github.com/FDW52AD2025/website52/commits?author=gfuelinme&since=2025-09-02&until=2025-09-02" target="_blank">Commits</a>
