Estilos CSS añadidos a la pagina principal de mis evidencias y creación del bloque de la practica 5

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <title>Mis Evidencias 😁👍</title>
 </head>
-<body>
+<body class="bodyprincipal1">
     <header>
         <h1>Fundamentos del Desarrollo Web: Evidencias de aprendizaje</h1>
     </header>
@@ -16,6 +17,8 @@
                     <hr>
                     <h2>Evidencia 1</h2>
                     <hr>  
+                </header>
+                <header>
                     <h2>Practica 1</h2>
                 </header>
                 <p>Para esta práctica se creó un documento HTML en el que se elaboró un artículo acerca de mis pasatiempos personales, haciendo uso de las etiquetas básicas vistas en clase: meta, title, header, main, footer, article, section, img y p. Además, se incluyó un archivo CSS para darle diseño a la página. Y se realizó un commit por cada tema desarrollado, para tener un total de cuatro commits.</p>
@@ -78,18 +81,31 @@
                     <ul>
                         <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-09-01&until=2025-09-02">LINK DE LOS COMMITS</a></li>
                     </ul>
+                </nav>
+            </section>
+
+            <section>
+                <header>
+                    <h2>Practica 5</h2>
+                </header>
+                <p>Instrucciones: </p>
+                <p>Fecha de los commits: 8 al 10 de Septiembre.</p>
+                <nav>
+                    <h4>Enlaces de GitHub:</h4>
+                    <ul>
+                        <li><a target="_blank" href="">LINK DE LOS COMMITS (No está listo)</a></li>
+                    </ul>
                     <hr>
                 </nav>
             </section>
         </article>
     </main>
     <aside></aside>
-    <footer>
+    <footer class="Hecho-por">
         <address>
             <p>Desarrollado por el alumno: Hugo Alejandro Zapata Rosales</p>
             <p>Matricula: 2088379</p>
             <p>Grupo: 52</p>
-            <hr>
         </address>
     </footer>
 </body>
