Agregado de botón de Selectores al menú principal de pasatiempos_v2, selectores.html es agregado, carpeta de imgselectores con imagen de prueba agregada

--- a/aLe.php27/pasatiempos_v2/index.html
+++ b/aLe.php27/pasatiempos_v2/index.html
@@ -22,6 +22,7 @@
             <li class="liindex"><a class="aindex" href="pasatiempo3.html">Series</a></li>
             <li class="liindex"><a class="aindex" href="pasatiempo4.html">Estilo libre</a></li>
             <li class="liindex"><a class="aindex" href="test.html">Test</a></li>
+            <li class="liindex"><a class="aindex" href="selectores.html">Selectores</a></li>
         </ul>
             <br><br>
         <center><img class="imgindexgeto" width="400" src="imagenes/getostarboy.jpg"></center>
