Agregado de soundtrack oficial de la pestaña de Selectores, en colaboración con Subway Surfers

--- a/aLe.php27/pasatiempos_v2/selectores.html
+++ b/aLe.php27/pasatiempos_v2/selectores.html
@@ -6,6 +6,7 @@
     <title>Selectores CSS</title>
     <link rel="icon" href="imagenes/jimbo.png" type="image/png">
     <link rel="stylesheet" href="estilos.css">
+    <audio src="subwayselectoresstars.mp3" autoplay loop></audio>
 </head>
 <body class="bodypasatiempos">
     <header class="headerpasatiempos">
@@ -25,7 +26,7 @@
             <section><h3>Selector hermano general</h3></section>
     </main>
     <aside class="asidepasatiempos">
-
+        <p>Estimula tu mente, libera ideas</p>
     </aside>
     <footer class="footerpasatiempos">
         <address>
