Puesta en escena de estilos a la pagina de Selectores, estilos.css actualizado, selectores.html sembrado con exito

--- a/aLe.php27/pasatiempos_v2/selectores.html
+++ b/aLe.php27/pasatiempos_v2/selectores.html
@@ -13,20 +13,27 @@
         <h1>©️Selectores CSS utilizados</h1>
     </header>
     <main class="mainpasatiempos">
-            <section><h3>Selector universal</h3></section>
-            <section><h3>Selector de tipo</h3></section>
-            <section><h3>Selector por id</h3></section>
-            <section><h3>Selector por clase</h3></section>
-            <section><h3>Selector por clase con tag particular</h3></section>
-            <section><h3>Selector por atributo</h3></section>
-            <section><h3>Selector de lista</h3></section>
-            <section><h3>Selector por descendientes</h3></section>
-            <section><h3>Selector hijos directos</h3></section>
-            <section><h3>Selector hermano adyacente</h3></section>
-            <section><h3>Selector hermano general</h3></section>
+            <section id="s404"><h3>Selector universal</h3></section>
+            <section id="s404"><h3>Selector de tipo</h3></section>
+            <section id="s404"><h3>Selector por id</h3></section>
+            <section id="s404"><h3>Selector por clase</h3></section>
+            <section id="s404"><h3>Selector por clase con tag particular</h3></section>
+            <section id="s404"><h3>Selector por atributo</h3></section>
+            <section id="s404"><h3>Selector de lista</h3></section>
+            <section id="s404"><h3>Selector por descendientes</h3></section>
+            <section id="s404"><h3>Selector hijos directos</h3></section>
+            <section id="s404"><h3>Selector hermano adyacente</h3></section>
+            <section id="s404"><h3>Selector hermano general</h3></section>
     </main>
     <aside class="asidepasatiempos">
-        <p>Estimula tu mente, libera ideas</p>
+        <h3>¿Qué es un selector?</h3>
+            <p>Un selector en CSS sirve para elegir los elementos HTML a los que se aplicarán los estilos.</p>
+                <h3>Ejemplo básico</h3>
+                    <pre>
+        h1 {
+        color: blue;
+        }
+                    </pre>
     </aside>
     <footer class="footerpasatiempos">
         <address>
