--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -83,7 +83,7 @@
 
                     <p>Enlaces requeridos:</p>
                     <ul>
-                        <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-09-01&until=2025-09-03" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-09-01&until=2025-09-03</a></li>
+                        <li>Link commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-09-01&until=2025-09-03" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-09-01&until=2025-09-03</a></li>
                     </ul>
 
 
@@ -93,6 +93,23 @@
             </header>
 
 
+        </section>
+
+        <section>
+            <header>
+                <h2>Práctica 5</h2>
+            </header>
+            <article>
+                <p>En esta práctica utilizaremos los selectores vistos anteriormente en clase y los aplicaremos en alguna de nuestras páginas de la práctica 3 (PasatiemposV2).</p>
+
+                <ul>
+                    <!-- <li></li>
+                    <li></li> -->
+                    <li>Link commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-09-08&until=2025-09-10" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-09-08&until=2025-09-10</a></li>
+                </ul>
+
+
+            </article>
         </section>
 
 
