Primeros Selectores encontrados y puestos en exhibición, clase y clase con tag

--- a/aLe.php27/pasatiempos_v2/selectores.html
+++ b/aLe.php27/pasatiempos_v2/selectores.html
@@ -13,17 +13,45 @@
         <h1>©️Selectores CSS utilizados</h1>
     </header>
     <main class="mainpasatiempos">
-            <section id="s404"><h3>Selector universal</h3></section>
-            <section id="s404"><h3>Selector de tipo</h3></section>
-            <section id="s404"><h3>Selector por id</h3></section>
-            <section id="s404"><h3>Selector por clase</h3></section>
-            <section id="s404"><h3>Selector por clase con tag particular</h3></section>
-            <section id="s404"><h3>Selector por atributo</h3></section>
-            <section id="s404"><h3>Selector de lista</h3></section>
-            <section id="s404"><h3>Selector por descendientes</h3></section>
-            <section id="s404"><h3>Selector hijos directos</h3></section>
-            <section id="s404"><h3>Selector hermano adyacente</h3></section>
-            <section id="s404"><h3>Selector hermano general</h3></section>
+            <section id="s404">
+                <h3>Selector universal</h3>
+            </section>
+            <section id="s404">
+                <h3>Selector de tipo</h3>
+            </section>
+            <section id="s404">
+                <h3>Selector por id</h3>
+            </section>
+            <section id="s404">
+                <h3>Selector por clase</h3>
+                <img width="300px" src="imgselectores/selectorclasecss.png" alt="Codigo del Selector por clase">
+                <img width="480px" src="imgselectores/selectorclasehtml.png" alt="Codigo del Selector por clase">
+                <img src="imgselectores/selectorclaseresult.png" alt="Resultado del Selector por clase">
+            </section>
+            <section id="s404">
+                <h3>Selector por clase con tag particular</h3>
+                <img width="300px" src="imgselectores/selectorclasetagcss.png" alt="Codigo del Selector por clase">
+                <img width="550px" src="imgselectores/selectorclasetaghtml.png" alt="Codigo del Selector por clase">
+                <img width="550px" src="imgselectores/selectorclasetagresult.png" alt="Resultado del Selector por clase">
+            </section>
+            <section id="s404">
+                <h3>Selector por atributo</h3>
+            </section>
+            <section id="s404">
+                <h3>Selector de lista</h3>
+            </section>
+            <section id="s404">
+                <h3>Selector por descendientes</h3>
+            </section>
+            <section id="s404">
+                <h3>Selector hijos directos</h3>
+            </section>
+            <section id="s404">
+                <h3>Selector hermano adyacente</h3>
+            </section>
+            <section id="s404">
+                <h3>Selector hermano general</h3>
+            </section>
     </main>
     <aside class="asidepasatiempos">
         <h3>¿Qué es un selector?</h3>
@@ -34,6 +62,8 @@
         color: blue;
         }
                     </pre>
+            <img class="img-asideestilolibre" src="imgselectores/htmlycss.jpeg" alt="HTML y CSS">
+            <p>&nbsp; &nbsp; &nbsp; HTML &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; CSS</p>
     </aside>
     <footer class="footerpasatiempos">
         <address>
