Selectores por tipo agregados, imagenes y selectores.html actualizado, correción de algunas redacciones

--- a/aLe.php27/pasatiempos_v2/selectores.html
+++ b/aLe.php27/pasatiempos_v2/selectores.html
@@ -17,22 +17,25 @@
                 <h3>Selector universal</h3>
             </section>
             <section id="s404">
-                <h3>Selector de tipo</h3>
+                <h3>Selector por tipo</h3>
+                <img width="250px" src="imgselectores/selectortipocss.png" alt="Codigo CSS del Selector por tipo">
+                <img width="400px" src="imgselectores/selectortipohtml.png" alt="Codigo HTML del Selector por tipo">
+                <img width="200px" src="imgselectores/selectortiporesult.png" alt="Resultado del Selector por tipo">
             </section>
             <section id="s404">
                 <h3>Selector por id</h3>
             </section>
             <section id="s404">
                 <h3>Selector por clase</h3>
-                <img width="300px" src="imgselectores/selectorclasecss.png" alt="Codigo del Selector por clase">
-                <img width="480px" src="imgselectores/selectorclasehtml.png" alt="Codigo del Selector por clase">
-                <img src="imgselectores/selectorclaseresult.png" alt="Resultado del Selector por clase">
+                <img width="300px" src="imgselectores/selectorclasecss.png" alt="Codigo CSS del Selector por clase">
+                <img width="480px" src="imgselectores/selectorclasehtml.png" alt="Codigo HTML del Selector por clase">
+                <img src="imgselectores/selectorclaseresult.png" alt="Resultado del Selector por clase con tag">
             </section>
             <section id="s404">
                 <h3>Selector por clase con tag particular</h3>
-                <img width="300px" src="imgselectores/selectorclasetagcss.png" alt="Codigo del Selector por clase">
-                <img width="550px" src="imgselectores/selectorclasetaghtml.png" alt="Codigo del Selector por clase">
-                <img width="550px" src="imgselectores/selectorclasetagresult.png" alt="Resultado del Selector por clase">
+                <img width="300px" src="imgselectores/selectorclasetagcss.png" alt="Codigo CSS del Selector por clase con tag">
+                <img width="550px" src="imgselectores/selectorclasetaghtml.png" alt="Codigo HTML del Selector por clase con tag">
+                <img width="550px" src="imgselectores/selectorclasetagresult.png" alt="Resultado del Selector por clase con tag">
             </section>
             <section id="s404">
                 <h3>Selector por atributo</h3>
