Selector por id agregado, imagenes agregadas

--- a/aLe.php27/pasatiempos_v2/selectores.html
+++ b/aLe.php27/pasatiempos_v2/selectores.html
@@ -24,6 +24,9 @@
             </section>
             <section id="s404">
                 <h3>Selector por id</h3>
+                <img width="250px" src="imgselectores/selectoridcss.png" alt="Codigo CSS del Selector por id">
+                <img width="600px" src="imgselectores/selectoridhtml.png" alt="Codigo HTML del Selector por id">
+                <img width="600px" src="imgselectores/selectoridresult.png" alt="Resultado del Selector por id">
             </section>
             <section id="s404">
                 <h3>Selector por clase</h3>
