Selector universal agregado, imagenes agregadas y modificación a index.html y estilos.css

--- a/aLe.php27/pasatiempos_v2/index.html
+++ b/aLe.php27/pasatiempos_v2/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="imagenes/jimbo.png" type="image/png">
     <audio src="balatromaintheme.mp3" autoplay loop></audio>
 </head>
-<body class="bodyindex">
+<body class="bodyindex" id="indexuni">
     <header class="headerindex">
         <h1>Mis pasatiempos</h1>
     </header>
