--- a/aLe.php27/pasatiempos_v2/selectores.html
+++ b/aLe.php27/pasatiempos_v2/selectores.html
@@ -15,6 +15,9 @@
     <main class="mainpasatiempos">
             <section id="s404">
                 <h3>Selector universal</h3>
+                <img width="400px" src="imgselectores/selectoruniversalcss.png" alt="Codigo CSS del Selector universal">
+                <img width="400px" src="imgselectores/selectoruniversalhtml.png" alt="Codigo HTML del Selector universal">
+                <img width="600px" src="imgselectores/selectoruniversalresult.png" alt="Resultado del Selector universal">
             </section>
             <section id="s404">
                 <h3>Selector por tipo</h3>
