Se creó la estructura de la pagina de los selectores y se modificaron los estilos CSS

--- a/Hugo-0699/pasatiemposmod/index.html
+++ b/Hugo-0699/pasatiemposmod/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina principal</title>
     <meta name="author" content="Hugo Alejandro Zapata Rosales">
     <meta name="description" content="Pasatiempos de Hugo Alejandro Zapata Rosales">
     <meta name="keywords" content="dibujo, videojuegos, gym, escritura">
     <link rel="stylesheet" href="estilos.css">
     <link rel="icon" href="imagenes/icono-inicial.png" type="image/png">
+    <title>Pagina principal</title>
 </head>
 <body class="bodyprincipal">
     <header class="headerprincipal">
@@ -20,6 +20,7 @@
             <li class="liprincipal"><a class="aprincipal" href="pasatiempo2.html">Video-Juegos</a></li>
             <li class="liprincipal"><a class="aprincipal" href="pasatiempo3.html">GYM y Calistenia</a></li>
             <li class="liprincipal"><a class="aprincipal" href="pasatiempo4.html">La Escritura</a></li>
+            <li class="liprincipal"><a class="aprincipal" href="selectores.html">Selectores</a></li>
         </ul>
         <br>
         <center><img class="imgprincipal" width="400" src="imagenes/img-perfil-maki.jpeg"></center>
@@ -27,7 +28,7 @@
     </main>
     <footer class="copyright">
         <address>
-            <p>Desarrollado por el alumno: Hugo Alejandro Zapata Rosales</p>
+            <h4> &copy; Desarrollado por el alumno: Hugo Alejandro Zapata Rosales</h4>
         </address>
     </footer>
 </body>
