--- a/aLe.php27/index.html
+++ b/aLe.php27/index.html
@@ -65,7 +65,7 @@
             <header>
                 <h3>Practica 5 - 08/09/2025 al 10/09/2025</h3>
             </header>
-            <p>Para la practica 4 solo puse un estilo a mi link en la pagina principal de la organización.</p>
+            <p>Kokokoko...</p>
             <section>
                 <ul>
                 <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/aLe.php27/selectorescss/index.html">PÁGINA DE LOS SELECTORES</a></li>
