Incrustación de estilos a la nueva pagina de Selectores

--- a/aLe.php27/selectorescss/index.html
+++ b/aLe.php27/selectorescss/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Selectores CSS</title>
     <link rel="icon" href="" type="image/png">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="estilosselectores.css">
     <audio src="subwayselectoresstars.mp3" autoplay loop></audio>
 </head>
-<body>
-    <header>
+<body class="bodyselectores">
+    <header class="headerselectores">
         <h1>©️Selectores CSS utilizados</h1>
     </header>
-    <main>
+    <main class="mainselectores">
             <section id="s404">
                 <h3>Selector universal</h3>
                 <img width="400px" src="imgselectores/selectoruniversalcss.png" alt="Codigo CSS del Selector universal">
@@ -57,7 +57,7 @@
                 <h3>Selector hermano general</h3>
             </section>
     </main>
-    <aside class="asidepasatiempos">
+    <aside class="asideselectores">
         <h3>¿Qué es un selector?</h3>
             <p>Un selector en CSS sirve para elegir los elementos HTML a los que se aplicarán los estilos.</p>
                 <h3>Ejemplo básico</h3>
@@ -66,10 +66,10 @@
         color: blue;
         }
                     </pre>
-            <img class="img-asideestilolibre" src="imgselectores/htmlycss.jpeg" alt="HTML y CSS">
+            <img class="img-asideselectores" src="imgselectores/htmlycss.jpeg" alt="HTML y CSS">
             <p>&nbsp; &nbsp; &nbsp; HTML &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; CSS</p>
     </aside>
-    <footer class="footerpasatiempos">
+    <footer class="footerselectores">
         <address>
             <p>Desarrollado por Alejandro Santiago Coronado</p>
         </address>
