Mejora a los estilos de selectorescss

--- a/aLe.php27/selectorescss/index.html
+++ b/aLe.php27/selectorescss/index.html
@@ -13,47 +13,42 @@
         <h1>©️Selectores CSS utilizados</h1>
     </header>
     <main class="mainselectores">
-            <section id="s404">
+            <section id="s505">
                 <h3>Selector universal</h3>
                 <img width="400px" src="imgselectores/selectoruniversalcss.png" alt="Codigo CSS del Selector universal">
                 <img width="600px" src="imgselectores/selectoruniversalresult.png" alt="Resultado del Selector universal">
             </section>
-            <section id="s404">
+            <section id="s505">
                 <h3>Selector por tipo</h3>
                 <img width="250px" src="imgselectores/selectortipocss.png" alt="Codigo CSS del Selector por tipo">
                 <img width="200px" src="imgselectores/selectortiporesult.png" alt="Resultado del Selector por tipo">
             </section>
-            <section id="s404">
+            <section id="s505">
                 <h3>Selector por id</h3>
                 <img width="250px" src="imgselectores/selectoridcss.png" alt="Codigo CSS del Selector por id">
                 <img width="600px" src="imgselectores/selectoridresult.png" alt="Resultado del Selector por id">
             </section>
-            <section id="s404">
+            <section id="s505">
                 <h3>Selector por clase</h3>
                 <img width="300px" src="imgselectores/selectorclasecss.png" alt="Codigo CSS del Selector por clase">
-                <img src="imgselectores/selectorclaseresult.png" alt="Resultado del Selector por clase con tag">
+                <img src="imgselectores/selectorclaseresult.png" alt="Resultado del Selector por clase">
             </section>
-            <section id="s404">
-                <h3>Selector por clase con tag particular</h3>
-                <img width="300px" src="imgselectores/selectorclasetagcss.png" alt="Codigo CSS del Selector por clase con tag">
-                <img width="550px" src="imgselectores/selectorclasetagresult.png" alt="Resultado del Selector por clase con tag">
-            </section>
-            <section id="s404">
+            <section id="s505">
                 <h3>Selector por atributo</h3>
             </section>
-            <section id="s404">
+            <section id="s505">
                 <h3>Selector de lista</h3>
             </section>
-            <section id="s404">
+            <section id="s505">
                 <h3>Selector por descendientes</h3>
             </section>
-            <section id="s404">
+            <section id="s505">
                 <h3>Selector hijos directos</h3>
             </section>
-            <section id="s404">
+            <section id="s505">
                 <h3>Selector hermano adyacente</h3>
             </section>
-            <section id="s404">
+            <section id="s505">
                 <h3>Selector hermano general</h3>
             </section>
     </main>
