Eliminación de 2 imagenes basura, cosillas extra

--- a/aLe.php27/index.html
+++ b/aLe.php27/index.html
@@ -75,6 +75,10 @@
         </article>
     </main>
     <aside></aside>
-    <footer></footer>
+    <footer>
+        <address>
+            <p>Desarrollado por yo y solo yo myAle27admin</p>
+        </address>
+    </footer>
 </body>
 </html>
