Errores arreglados en el index de los selectores

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -88,11 +88,12 @@
                 <header>
                     <h2>Practica 5</h2>
                 </header>
-                <p>Instrucciones: </p>
+                <p>En esta práctica, tomaremos como base a la segunda versión de "Mis pasatiempos" para crear un sitio donde se muestren las capturas de cada selector CSS.</p>
                 <p>Fecha de los commits: 8 al 10 de Septiembre.</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
                     <ul>
+                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/selectores_css/index.html">LINK A LA PAGINA DE LOS SELECTORES EN CSS DE LA V2 DE "MIS PASATIEMPOS"</a></li>
                         <li><a target="_blank" href="">LINK DE LOS COMMITS (No está listo)</a></li>
                     </ul>
                     <hr>
