--- a/Hugo-0699/selectores_css/index.html
+++ b/Hugo-0699/selectores_css/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="img-selectores/ "> <!-- pendiente de imgs en la carpeta -->
-    <link rel="icon" href=" " type="image/png"> <!-- pendiente de icono -->
-    <link rel="stylesheet" href="estilos.css"> <!-- estilos de los pasatiempos -->
-    <title>Pagina 5</title>
+    <link rel="icon" href="img_selectores/icono-inicial.png" type="image/png"> 
+    <link rel="stylesheet" href="estilos.css">
+    <title>Selectores de los pasatiempos</title>
 </head>
-<body>
-    <header>
-        <h1 id="titulo5">&star; SELECTORES EN CSS &star;</h1>
+<body class="bodyprincipal">
+    <header class="headerprincipal">
+        <h1>&star; SELECTORES EN CSS &star;</h1>
     </header>
     <hr>
-    <main>
+    <main class="mainselector">
         <article>
             <section>
                 <h3>Selector Universal</h3>
@@ -50,9 +49,9 @@
             </section>
         </article>
     </main>
-    <footer class="copyright">
+    <footer class="footer">
         <address>
-            <h4> &copy; Desarrollado por el alumno: Hugo Alejandro Zapata Rosales</h4>
+            <h4> &copy; Desarrollado por Hugo Alejandro Zapata Rosales</h4>
         </address>
     </footer>
 </body>
